アイテムの再描画!

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,16 @@ label {
     color: #888;
 }
 
+#news {
+    font-size: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    color: red;
+    background-color: lightpink;
+}
+
 .item {
     margin-bottom: 1rem;
 }
