--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,31 @@ label {
     margin-top: 1rem;
 }
 
+#loading {
+    position: absolute;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background: rgba(100, 100, 100, .8);
+    z-index: 2147483647;
+}
+
+#loading img {
+    /* width: 20vw;
+    max-width: 100px;
+    height: auto;
+    margin-left: 40vw; */
+    margin: auto;
+    width: 20vw;
+    max-width: 100px;
+    height: auto;
+}
+
+#loadingMsg {
+    color: white;
+    font-size: 3rem;
+    text-align: center;
+    margin-top: 30vh;
+}
 /***
 Spectrum Colorpicker v1.8.0
 https://github.com/bgrins/spectrum
