--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ label {
     max-width: 800px;
 }
 
-#chgImgBtn {
+#chgImgBtn, #showLogBtn {
     margin: auto;
     width: 100%;
     max-width: 800px;
@@ -86,6 +86,10 @@ label#imgStatus {
 
 .hosoku {
     font-size: 0.6rem;
+}
+
+#logArea span {
+    color: indianred;
 }
 
 /***
