--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,50 @@
 body {
     width: 100%;
+    background-image: url("../img/kako.png"), url("../img/jidouka.png"), url("../img/bg.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 120px, 120px, cover;
+    background-position: right top, left bottom, right bottom;
+}
+
+.stepImg {
+    width: 50%;
+    max-width: 300px;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+#customFile1, #customFile2 {
+    top: 2rem;
+    position: absolute;
+    width: 100%;
+    height: 60%;
+    /* max-height: 265px; */
+    /* min-width: 300px; */
+    min-height: 300px;
+    max-height: calc(450px - 2rem);
+    z-index: 800;
+}
+
+#stepDiv {
+    position: relative;
+    z-index: 999;
+}
+
+.step1 {
+    position: absolute;
+    top: -2.3rem;
+    right: 0;
+}
+
+.step2 {
+    position: absolute;
+    top: 10rem;
+    left: -0.5rem;
 }
 
 label {
@@ -29,6 +74,8 @@ label {
 
 .item {
     margin-bottom: 1rem;
+    padding-right: 5%;
+    padding-left: 5%;
 }
 
 #canvas, #result, #previewArea{
@@ -38,20 +85,90 @@ label {
     max-height: 450px;
     min-width: 300px;
     min-height: 300px;
+    border-radius: 10px;
 }
 
-.toolForm {
-    width: 80%;
+#tools {
+    width: 90%;
     margin: auto;
     max-width: 800px;
 }
 
-#chgImgBtn, #showLogBtn {
+.toolForm {
+    background-color: rgba(255, 255, 255, 0.253);
+    padding-bottom: 5%;
+
+    /* グラスも―ふぃふぃずむなかんじ */
+    border-color: white;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 10px;
+}
+
+.boxShadow {
+    box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.253);
+}
+
+.blur{
+    -ms-filter: blur(6px);
+    filter: blur(6px);
+}
+
+.blurBg{
+    /* background: url(画像URL) no-repeat center; */
+    background-size: cover;
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
+  }
+
+  .blurBg:before{
+    content: '';
+    background: inherit;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    z-index: -1;
+  }
+
+#canvaswrap {
+    background-color: rgba(255, 255, 255, 0.253);
+    margin-top: -25px;
+    padding-top: 2rem;
+    padding-bottom: 0.5rem;
+    border-color: white;
+    border-radius: 10px 10px 0 0;
+}
+
+#version {
+    margin-top: 2rem;
+    margin-left: 0;
+    margin-bottom: 0;
+    color: white;
+}
+
+#chgImgBtn {
     margin: auto;
     width: 100%;
     max-width: 800px;
     min-width: 300px;
     margin-top: 1rem;
+}
+
+#showLogBtn {
+    background-color: Transparent;
+    border: none;
+    color: white;
+    text-underline-position: below;
+    border-bottom: solid 2px white;
+    line-height: 0.8rem;
 }
 
 #loading {
