--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ label {
     padding-left: 1rem;
     padding-right: 1rem;
     color: white;
-    background-color: gray;
+    background-color: #bfbcbc;
 }
 
 .item {
