--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
     width: 100%;
-    background-color: #dee !important;
+    background-color: #ddeeee !important;
 }
 
 label {
@@ -87,6 +87,16 @@ label {
     margin-top: 1rem;
 }
 
+#editMenu {
+    display: grid;
+    place-items: center;
+}
+
+#editMenu div {
+    margin-top: 1em;
+}
+
+
 #loading {
     position: absolute;
     left: 0; top: 0;
@@ -124,6 +134,63 @@ label#imgStatus {
 #logArea span {
     color: indianred;
 }
+/* トグルスイッチ用 https://uiverse.io/namecho/quiet-panther-93 */
+.switch {
+    --button-width: 2em;
+    --button-height: 1em;
+    --toggle-diameter: 1.2em;
+    --button-toggle-offset: calc((var(--button-height) - var(--toggle-diameter)) / 2);
+    --toggle-shadow-offset: 5px;
+    --toggle-wider: 3em;
+    --color-grey: #cccccc;
+    --color-green: #0BA;
+   }
+   
+   .slider {
+    display: inline-block;
+    width: var(--button-width);
+    height: var(--button-height);
+    background-color: var(--color-grey);
+    border-radius: calc(var(--button-height) / 2);
+    position: relative;
+    transition: 0.3s all ease-in-out;
+   }
+   
+   .slider::after {
+    content: "";
+    display: inline-block;
+    width: var(--toggle-diameter);
+    height: var(--toggle-diameter);
+    background-color: #fff;
+    border-radius: calc(var(--toggle-diameter) / 2);
+    position: absolute;
+    top: var(--button-toggle-offset);
+    transform: translateX(var(--button-toggle-offset));
+    box-shadow: var(--toggle-shadow-offset) 0 calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
+    transition: 0.3s all ease-in-out;
+   }
+   
+   .switch input[type="checkbox"]:checked + .slider {
+    background-color: var(--color-green);
+   }
+   
+   .switch input[type="checkbox"]:checked + .slider::after {
+    transform: translateX(calc(var(--button-width) - var(--toggle-diameter) - var(--button-toggle-offset)));
+    box-shadow: calc(var(--toggle-shadow-offset) * -1) 0 calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
+   }
+   
+   .switch input[type="checkbox"] {
+    display: none;
+   }
+   
+   .switch input[type="checkbox"]:active + .slider::after {
+    width: var(--toggle-wider);
+   }
+   
+   .switch input[type="checkbox"]:checked:active + .slider::after {
+    transform: translateX(calc(var(--button-width) - var(--toggle-wider) - var(--button-toggle-offset)));
+   }
+   
 
 /***
 Spectrum Colorpicker v1.8.0
