縁取りの追加、UI変更

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,9 @@ label {
     min-height: 300px;
     border: 3px solid #0BA;
 }
+#shadowValue, #fuchiValue {
+    width: 2rem;
+}
 
 .toolForm {
     width: 80%;
@@ -92,10 +95,16 @@ label {
     place-items: center;
 }
 
-#editMenu div {
+.nav-tabs {
     margin-top: 1em;
+    width: 50%;
+    max-width: 450px;
+    min-width: 300px;
 }
-
+.tab-content {
+    padding: 1em;
+    background-color: white;
+}
 
 #loading {
     position: absolute;
@@ -130,7 +139,6 @@ label#imgStatus {
 .hosoku {
     font-size: 0.6rem;
 }
-
 #logArea span {
     color: indianred;
 }
