--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,21 @@ label {
     background-color: #bfbcbc;
 }
 
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e") !important;
+}
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e") !important;
+}
+.carousel-indicators {
+    bottom: -5px !important;
+}
+.carousel-indicators li {
+    background-color:rgba(150,150,150,.5) !important;
+}
+.carousel-indicators .active{
+    background-color:#000 !important;
+}
 .item {
     margin-bottom: 1rem;
 }
