--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ label {
 .carousel-indicators {
     bottom: -5px !important;
 }
-.carousel-indicators li {
+.carousel-indicators [data-bs-target] {
     background-color:rgba(150,150,150,.5) !important;
 }
 .carousel-indicators .active{
