--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,21 @@ label {
 .card-body {
     padding: 0.3rem !important;
 }
+.selectedCard {
+    position: relative;
+}
+
+.selectedCard::before {
+    content: '';
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    right: -1px;
+    bottom: -1px;
+    background-color: rgba(0,0,0,0.7);
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px
+  }
   
 #avImg, #bgImg, #clImg {
     background-color: rgb(214,215,218);
@@ -82,6 +97,29 @@ label {
 
 #colorBtn5 {
     background-size: cover;
+}
+
+.card-img-overlay {
+    padding: 0;
+    top: calc(30% - 0.5rem);
+    text-align: center;
+    font-weight: bold;
+    display: none;
+}
+.card-header {
+    border: none;
+}
+
+.row {
+    --bs-gutter-x: 0rem;
+}
+
+.col {
+    margin-right: 3px;
+}
+
+.form-control-color {
+    padding: 0;
 }
 
 #canvas, #result, #previewArea{
@@ -181,6 +219,10 @@ label {
   }
   .templateBtn {
     background-color: white;
+    padding: 0;
+  }
+  .card-header {
+    padding: 0;
   }
 
 #loading {
